🐛 FIX: z-index -> cursor overrides alt. cursor

--- a/public/styles.css
+++ b/public/styles.css
@@ -240,7 +240,7 @@ html.transition *:after {
 	color: var(--text);
 	display: flex;
 	justify-content: center;
-
+	z-index: 2;
 }
 
 .cursor.alt{
@@ -252,6 +252,7 @@ html.transition *:after {
 	visibility: hidden;
 	flex-shrink: 0;
 	transform: translateY(-100%);
+	z-index: 1;
 }
 
 .cursor.alt[data-active=true]{
